# vencoder

./: .gitignore  README.md  TAURI_SETUP.md  electron-builder.release.yml  package-lock.json  package.json
backend/: agent.py  agent_harness.py  builtin_models.py  chat_app.py  chat_db.py  cli.py  config.py  context_builders.py  file_tree.py  llm_builder.py  logger.py  multi_agent.py  orchestrator.py  prompts.py  requirements-builtin.txt  requirements.txt  semantic_index.py  server.py  test_orchestrator.py  title_gen.py  transcribe.py  tui.py  visual_agents.py  visual_context.py
backend/tools/: __init__.py  agent_context.py  context_tools.py  duplicate_wrapper.py  file_tools.py  git_tools.py  path_utils.py  search_tools.py  shell_tools.py
docs/: AGENT_DESIGN_ANALYSIS.md  RUN_INSTRUCTIONS.md
electron/: activity-logs.js  index.html  main.js  model-selector.js  preload.js  project-cache.js  renderer.js  styles.css  tauri-bridge.js
model/: README.md  export_ollama.py  finetune.py  requirements.txt
model/data/: sample.jsonl.example
scripts/: build-protected.js  codec.js  copy-webview.js  create-app-icon.js  create-icon.js  obfuscate-renderer.js  prepare-backend.js  prepare-python.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
